cambio de pasword_reset y dashboar_m

--- a/templates/core/password_reset/request_reset.html
+++ b/templates/core/password_reset/request_reset.html
@@ -1,19 +1,22 @@
 {% extends "components/base.html" %}
 {% load static %}
+
 {% block content %}
 
 <head>
-  <link rel="stylesheet" href="{% static 'Authentication/css/request_password.css' %}" />
   <title>Recuperar Contraseña - MonitorAula</title>
+  <link rel="stylesheet" href="{% static 'Authentication/css/request_password.css' %}" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 
 <main class="login-body bg-gray-100 flex justify-center items-center h-screen">
   <div class="login-container bg-white p-8 rounded-lg shadow-lg max-w-lg w-full">
     <div class="text-center mb-6">
       <img class="logo mb-4 mx-auto" src="{% static 'Authentication/image/logo.jpeg' %}" alt="Logo">
-      <h2 class="text-2xl font-bold text-gray-800">Recuperar Contraseña</h2> 
+      <h2 class="text-2xl font-bold text-gray-800">Recuperar Contraseña</h2>
+      <p class="text-sm text-gray-600">Ingresa tu correo y te enviaremos un enlace para restablecerla.</p>
     </div>
 
     <form method="POST" id="reset-form" class="space-y-4">
@@ -30,7 +33,11 @@
         Enviar código
       </button>
     </form>
+
+    <div class="text-center mt-4">
+      <a href="{% url 'signin' %}" class="login-btn mt-4 block text-center bg-gray-600 hover:bg-gray-700">
+        <i class="fas fa-arrow-left"></i>Volver al inicio de sesión</a>
+    </div>
   </div>
 </main>
-
 {% endblock %}
