--- a/templates/core/Authentication/signin.html
+++ b/templates/core/Authentication/signin.html
@@ -12,7 +12,7 @@
 <main class="login-body bg-gray-100 flex justify-center items-center h-screen">
   <div class="login-container bg-white p-8 rounded-lg shadow-lg max-w-lg w-full">
     <div class="text-center mb-6">
-      <img class="logo mb-4 mx-auto" src="{% static 'Authentication/image/logo.jpeg' %}" alt="Logo">
+      <img class="logo mb-4 mx-auto" src="{% static 'Authentication/image/logo.png' %}" alt="Logo">
       <h2 class="text-2xl font-bold text-gray-800">Sistema de Monitoreo de Atención</h2> 
       <p class="text-sm text-gray-600">Ingresa tus credenciales para continuar</p>
     </div>
